Event Handler for Share button added

--- a/profile.html
+++ b/profile.html
@@ -41,14 +41,19 @@
             <div class="h-max p-3 text-white text-3xl font-bold">Achievements</div>
             <div class="col-span-2 p-3">
                 <h3 class="text-white text-3xl font-bold mb-2">Share a Lesson</h3>
-                <textarea name="lesson" id="" cols="80" rows="5" class="p-3 rounded-md" style="resize: none;"
-                    placeholder="Write a lesson"></textarea>
+                <textarea name="lesson" id="write-lesson" cols="80" rows="5" class="p-3 rounded-md"
+                    style="resize: none;" placeholder="Write a lesson"></textarea>
 
-                <p class="text-right"> <button
+                <p class="text-right"> <button id="share-btn"
                         class="bg-white rounded-md px-5 my-3 text-gray-700 font-bold">Share</button></p>
+                <div id="post-div">
+
+                </div>
             </div>
         </div>
     </main>
+
+    <script src="js/profile.js"></script>
 </body>
 
 </html>
