helpful, comment and share buttons added

--- a/profile.html
+++ b/profile.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header class="bg-gray-700 w-4/5 mx-auto p-5">
+    <header class="bg-gray-700 w-4/5 mx-auto p-5 rounded-b-lg">
         <div class="w-max mx-auto">
             <button class="rounded-md px-5 my-3 text-white">Change Cover</button>
         </div>
@@ -36,7 +36,7 @@
         </div>
     </header>
     <hr class="w-4/5 mx-auto h-1">
-    <main class="bg-gray-700 w-4/5 mx-auto p-5">
+    <main class="bg-gray-700 w-4/5 mx-auto p-5 rounded-lg">
         <div class="grid grid-cols-3 gap-4 ">
             <div class="h-max p-3 text-white text-3xl font-bold">Achievements</div>
             <div class="col-span-2 p-3">
